--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
   </style>
 </head>
 <body>
-  <button>
-      <img style="vertical-align:middle" src="zaincash.png">
+  <button onclick="javascript: alert('hello')">
+      <img  style="vertical-align:middle" src="zaincash.png">
+  </button>
+
+  <button onclick="javascript: alert('مرحبا')">
+      <img  style="vertical-align:middle" src="zaincash-ar.png">
   </button>
 </body>
 </html>
